   storage_servers.dat changes to storage_servers_new.dat
 * support file append, add tests: fdfs_appender_test and fdfs_appender_test1
 * storage_dio.c: dio_deal_task split to several functions
 * tracker http check thread exit normally
 * function fdfs_get_file_info_ex changed, add function fdfs_get_file_info_ex1
 * fix some type cast error when compile with c++

Version 2.07  2011-01-09
 * slave file's prefix name can be empty
 * FDFS_MAX_GROUPS change from 64 to 512
 * file size field in the file id changed: high 32 bits is random integer 
   when the file size < 2GB and the highest bit set to 1
 * tracker_service.c: in function list_group_storages, use strcpy 
   intead of memcpy
 * php extension add function fastdfs_tracker_delete_storage
 * client add tool: fdfs_file_info to get file info, including file size,
   create timestamp, source storage ip address and crc32 signature
 * fdfs_upload_file.c: omit more error info when the local file not exist

Version 2.06  2010-12-26
 * sync file op: do not sync the file which exists on dest storage server
   and the file size are same 
 * bug fixed: sync copy file will clear the existed file on dest storage
   server (truncate the file size to 0), this bug caused by V2.04
 * bug fixed: make temp file discard system function mkstemp, 
   use file sequence No. with pthread_mutex_lock
 * bug fixed: function fastdfs_tracker_list_groups, when parameter group_name
   is null or empty string, return all groups info
 * bug fixed: upload a file extends 2GB will fail
 * bug fixed: tracker to tracker sync system data files, in function: 
   tracker_mem_get_tracker_server, pTrackerStatus not be set properly

Version 2.05  2010-12-05
 * client/fdfs_monitor.c: add sync delay time
 * tracker/fast_task_queue.c: pTask->data = pTask->arg + arg_size; 
   change to: pTask->data = (char *)pTask->arg + arg_size;
 * bug fixed: storage_sync.c line 237 cause core dump in Ubuntu 10.04